# susy-codec

./: .gitlab-ci.yml  Cargo.toml
derive/: Cargo.toml
derive/src/: decode.rs  encode.rs  lib.rs  trait_bounds.rs  utils.rs
derive/tests/: mod.rs
src/: codec.rs  joiner.rs  keyedvec.rs  lib.rs
tests/: mod.rs  single_field_struct_encoding.rs  skip.rs
