[package]
name = "susy-codec-derive"
description = "Serialization and deserialization derive macro for Susy Codec"
version = "3.2.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.26", features = [ "full", "visit" ] }
quote = "0.6"
proc-macro2 = "0.4"
proc-macro-crate = "0.1.3"

[features]
default = ["std"]
std = []
