[package]
name = "susy-codec-derive"
description = "Serialization and deserialization derive macro for Susy Codec"
version = "2.2.0"
authors = ["Susy Technologies <admin@superstring.ch>"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[features]
default = ["std"]
std = []
